add userinfo routes and update swagger
