# routes/index.js
@@ -1,7 +1,9 @@
+const { Router } = require('express');
 const express = require('express');
 const router = express.Router();
 
 router.use('/', require('./swagger'));
+router.use('/userinfo', require('./userinfo'))
 router.use('/recipeinfo', require('./recipeinfo'))
 router.use('/comment', require('./comment'))
 router.use('/communities', require('./communities'))
